Fix scrolling on mobile devices.

--- a/src/main/webapp/scss/main.scss
+++ b/src/main/webapp/scss/main.scss
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 body {
-    touch-action: none;
+    touch-action: pan-y;
 }
 
 .actionButtons td, .actionButtons tr {
